--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ lazy_static = "1.5.0"
 rand = "0.9.0-beta.1"
 futures = "0.3.31"
 
+totp-rs = { version = "5.6.0", features = ["qr", "gen_secret"] }
+
 [profile.release]
 opt-level = 'z'
 strip = true
