--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rand = "0.9.0-beta.1"
 futures = "0.3.31"
 
 totp-rs = { version = "5.6.0", features = ["qr", "gen_secret"] }
+uuid = { version = "1.11.0", features = ["v4"] }
 
 [profile.release]
 opt-level = 'z'
