--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "strawberry-id"
-version = "2.2.1"
+version = "2.2.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,23 +8,23 @@ edition = "2021"
 [dependencies]
 rocket = { version = "0.5.1", features = ["json", "secrets"] }
 rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
-tokio = "1.42.0"
+tokio = "1.43.0"
 
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
+sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
 argon2 = "0.6.0-pre.1"
 sha2 = "0.11.0-pre.4"
 hex = "0.4.3"
 
-serde = "1.0.216"
-serde_json = "1.0.134"
+serde = "1.0.217"
+serde_json = "1.0.137"
 serde_yaml = "0.9.34"
 
 lazy_static = "1.5.0"
-rand = "0.9.0-beta.1"
+rand = "0.9.0"
 futures = "0.3.31"
 
 totp-rs = { version = "5.6.0", features = ["qr", "gen_secret"] }
-uuid = { version = "1.11.0", features = ["v4"] }
+uuid = { version = "1.13.1", features = ["v4"] }
 
 [profile.release]
 opt-level = 'z'
