--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "strawberry-id"
-version = "2.2.2"
+version = "2.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,6 +18,7 @@ hex = "0.4.3"
 serde = "1.0.219"
 serde_json = "1.0.140"
 serde_yaml = "0.9.34"
+urlencoding = "2.1.3"
 
 lazy_static = "1.5.0"
 rand = "0.9.0"
@@ -25,6 +26,7 @@ futures = "0.3.31"
 
 totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
 uuid = { version = "1.17.0", features = ["v4"] }
+
 
 [profile.release]
 opt-level = 'z'
